--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,22 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <application
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    package="com.example.tetrisgame"><application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TetrisGame">
+        
+        <!-- Actividad del menú principal (LAUNCHER) -->
         <activity
-            android:name=".MainActivity"
+            android:name=".MenuActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <!-- Actividad del juego -->
+        <activity
+            android:name=".MainActivity"
+            android:exported="false" />
+            
+        <!-- Actividad de puntaje máximo -->
+        <activity
+            android:name=".HighScoreActivity"
+            android:exported="false" />
+            
+        <!-- Actividad de fin de juego -->
+        <activity
+            android:name=".GameOverActivity"
+            android:exported="false" />
+            
     </application>
 
 </manifest>
